# ImageQuant

./: LICENSE  README.md  install.bat  pyproject.toml  start.bat
configs/: lab_policy.yaml
protocolquant/: __init__.py  cli.py  io.py  measurements.py  models.py  policy.py  protocol.py  qc.py  reporting.py  runner.py  utils.py
protocolquant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
protocolquant/gui/: __init__.py  napari_wizard.py
protocolquant/segmentation/: __init__.py  cache.py  cellpose_backend.py  fallback.py
protocols/: nuclei_count_intensity_2d_v1.yaml  released_registry.yaml
tests/: conftest.py  helpers.py  test_cellpose_smoke.py  test_cli_integration.py  test_gui_wizard.py  test_io.py  test_measurements.py  test_models.py  test_package.py  test_policy.py  test_protocol.py  test_qc.py  test_reporting.py
